finish adding project links and fix spacing links on desktop vs mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,8 +108,13 @@ Content Styles
 /--------------------*/
 
 .spacing-wrapper {
+  height: 225px;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .spacing-wrapper { height: auto; }
 }
 
 /* content section styles */
